First commit for header bar

--- a/Project-SIYANDO tennis courts/SiyandoHist.html
+++ b/Project-SIYANDO tennis courts/SiyandoHist.html
@@ -1,10 +1,25 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
    <head>
-
+      <meta charset="utf-8">
+      <link rel="stylesheet" href="SiyandoHist.css"/>
    </head>
    <body>
+      <div>
+         <h1 class="header">Siyando</h1>
+      </div>
+      <div class="header-bar">
+         <span class="courts"> 
+            <button>Кортове</button>
+         </span>
+         <span class="save-hour"> 
+            <button>Запиши час</button>
+         </span>
+         <span class="siyando-shop"> 
+            <button>СияндоШОП</button>
+         </span>
 
+      </div>
    </body>
 
 </html>
