Styling header-bar

--- a/Project-SIYANDO tennis courts/SiyandoHist.html
+++ b/Project-SIYANDO tennis courts/SiyandoHist.html
@@ -8,17 +8,21 @@
       <div>
          <h1 class="header">Siyando</h1>
       </div>
-      <div class="header-bar">
-         <span class="courts"> 
-            <button>Кортове</button>
-         </span>
-         <span class="save-hour"> 
-            <button>Запиши час</button>
-         </span>
-         <span class="siyando-shop"> 
-            <button>СияндоШОП</button>
-         </span>
-
+      <div class="page">
+         <div class="header-bar">
+            <span class="courts"> 
+               <button>Кортове</button>
+            </span>
+            <span class="save-hour"> 
+               <button>Запиши час</button>
+            </span>
+            <span class="siyando-shop"> 
+               <button>СияндоШОП</button>
+            </span>
+         </div>
+         <div class="content">
+            
+         </div>
       </div>
    </body>
 
