side-bar on shop made and more styling

--- a/Project-SIYANDO tennis courts/SaveHour.html
+++ b/Project-SIYANDO tennis courts/SaveHour.html
@@ -23,7 +23,9 @@
             </span>
          </div>
          <div class="content">
-            
+            <div class="save-hour-content">
+                
+            </div>
          </div>
       </div>
    </body>
