--- a/Project-SIYANDO tennis courts/SiyandoShop.html
+++ b/Project-SIYANDO tennis courts/SiyandoShop.html
@@ -16,14 +16,27 @@
                 <button onclick="location.href='./SiyandoHist.html'"">Кортове</button>
             </span>
             <span class="save-hour btn-wrap"> 
-               <button onclick="location.href='./SaveHour.html'"">Запиши час</button>
+                <button onclick="location.href='./SaveHour.html'"">Запиши час</button>
             </span>
             <span class="siyando-shop btn-wrap"> 
                 <button onclick="location.href='./SiyandoShop.html'"">СияндоШОП</button>
             </span>
          </div>
          <div class="content">
-            
+            <div class="siyando-shop-content">
+                <div class="side-bar">
+                    <span class="rackets btn-wrap"> 
+                        <button class="rackets-shop-btn">Ракети</button>
+                     </span>
+                     <span class="rackets btn-wrap"> 
+                        <button class="rackets-shop-btn">Мъже</button>
+                     </span>
+                     <span class="rackets btn-wrap"> 
+                        <button class="rackets-shop-btn">Жени</button>
+                     </span>
+                </div>
+            </div>
+
          </div>
       </div>
    </body>
