shop updated and sign up for tournament form added

--- a/Project-SIYANDO tennis courts/Bags-shop.html
+++ b/Project-SIYANDO tennis courts/Bags-shop.html
@@ -38,52 +38,46 @@
             </div>
             <div class="products">
                 <div class="product">
-                       <img class="raquet-img" src="tennis-racket3.jpg"/>
-                       <label>Head - тенис ракета US open</label>
-                       <span class="price">139,99 лв.</span>
+                       <img class="raquet-img" src="bag-shop1.jpg"/>
+                       <label>Artengo - тенис раница</label>
+                       <span class="price">18,40 лв.</span>
                        <span class="tooltip">
                         <ul>
-                            <li>Големина на главата: 665 см²</li>
-                            <li>Баланс: 4 pts HL</li>
-                            <li>Наплитане: 16 x 19</li>
-                            <li>Дължина: 68,6 см</li>
-                            <li>Тегло (Ненаплетена): 275 гр</li>
-                            <li>Рамка: 23 мм U Beam</li>
-                            <li>Грип: 3</li>
+                            <li>Състав: Полиестер</li>
+                            <li>Цвят: Син</li>
+                            <li>Размер: 19 литра</li>
+                            <li>За детски ракети</li>
+                            <li>За гръб</li>
                         </ul>
                         <button class="buy-product">Купи</button>
                       </span>
                 </div>
                 <div class="product">
-                    <img class="raquet-img" src="tennis-racket2.jpg"/>
-                    <label>Wilson - тенис ракета Wimbledon</label>
-                    <span class="price">159,99 лв.</span>
+                    <img class="raquet-img" src="bag-shop2.jpg"/>
+                    <label>Head - тенис сак</label>
+                    <span class="price">109,00 лв.</span>
                     <span class="tooltip">
                         <ul>
-                            <li>Големина на главата: 665 см²</li>
-                            <li>Баланс: 4 pts HL</li>
-                            <li>Наплитане: 16 x 19</li>
-                            <li>Дължина: 68,6 см</li>
-                            <li>Тегло (Ненаплетена): 275 гр</li>
-                            <li>Рамка: 23 мм U Beam</li>
-                            <li>Грип: 3</li>
+                            <li>Състав: Полиестер</li>
+                            <li>Цвят: Черен</li>
+                            <li>Размер: 35 литра</li>
+                            <li>За всякакви ракети</li>
+                            <li>За гръб</li>
                         </ul>
                         <button class="buy-product">Купи</button>
                       </span>
              </div>
              <div class="product">
-                <img class="raquet-img" src="tennis-racket1.jpg"/>
-                <label>Wilson - детска тенис ракета</label>
-                <span class="price">99,99 лв.</span>
+                <img class="raquet-img" src="bag-shop3.jpg"/>
+                <label>Babolat - тенис сак</label>
+                <span class="price">72,90 лв.</span>
                 <span class="tooltip">
                     <ul>
-                        <li>Големина на главата: 665 см²</li>
-                        <li>Баланс: 4 pts HL</li>
-                        <li>Наплитане: 16 x 19</li>
-                        <li>Дължина: 68,6 см</li>
-                        <li>Тегло (Ненаплетена): 275 гр</li>
-                        <li>Рамка: 23 мм U Beam</li>
-                        <li>Грип: 3</li>
+                        <li>Състав: Полиестер</li>
+                        <li>Цвят: Черен</li>
+                        <li>Размер: 39 литра</li>
+                        <li>За всякакви ракети</li>
+                        <li>За гръб</li>
                     </ul>
                     <button class="buy-product">Купи</button>
                   </span>
