--- a/Project-SIYANDO tennis courts/SiyandoHist.html
+++ b/Project-SIYANDO tennis courts/SiyandoHist.html
@@ -160,7 +160,7 @@
 
                   </ol>
                <div class="btn-wrap tournament">
-                  <button>Запиши се за следващия турнир</button>
+                  <button  onclick="location.href='sign-up-tournament.html'">Заяви участие за следващия турнир</button>
                </div>
                </div>
 
