--- a/Project-SIYANDO tennis courts/Balls-shop.html
+++ b/Project-SIYANDO tennis courts/Balls-shop.html
@@ -38,52 +38,43 @@
             </div>
             <div class="products">
                 <div class="product">
-                       <img class="raquet-img" src="tennis-racket3.jpg"/>
-                       <label>Head - тенис ракета US open</label>
-                       <span class="price">139,99 лв.</span>
+                       <img class="raquet-img" src="tennis-balls1.jpg"/>
+                       <label>Artengo - тенис топки TB160</label>
+                       <span class="price">5,40 лв.</span>
                        <span class="tooltip">
                         <ul>
-                            <li>Големина на главата: 665 см²</li>
-                            <li>Баланс: 4 pts HL</li>
-                            <li>Наплитане: 16 x 19</li>
-                            <li>Дължина: 68,6 см</li>
-                            <li>Тегло (Ненаплетена): 275 гр</li>
-                            <li>Рамка: 23 мм U Beam</li>
-                            <li>Грип: 3</li>
+                            <li>Тежест: 100гр</li>
+                            <li>Цвят: Жълт</li>
+                            <li>За интензивна игра</li>
+                            <li>Брой: 3</li>                            
                         </ul>
                         <button class="buy-product">Купи</button>
                       </span>
                 </div>
                 <div class="product">
-                    <img class="raquet-img" src="tennis-racket2.jpg"/>
-                    <label>Wilson - тенис ракета Wimbledon</label>
-                    <span class="price">159,99 лв.</span>
+                    <img class="raquet-img" src="tennis-balls2.jpg"/>
+                    <label>Artengo - тенис топки TB930</label>
+                    <span class="price">20,99 лв.</span>
                     <span class="tooltip">
                         <ul>
-                            <li>Големина на главата: 665 см²</li>
-                            <li>Баланс: 4 pts HL</li>
-                            <li>Наплитане: 16 x 19</li>
-                            <li>Дължина: 68,6 см</li>
-                            <li>Тегло (Ненаплетена): 275 гр</li>
-                            <li>Рамка: 23 мм U Beam</li>
-                            <li>Грип: 3</li>
+                            <li>Тежест: 100гр</li>
+                            <li>Цвят: Жълт</li>
+                            <li>За интензивна игра</li>
+                            <li>Брой: 8</li>          
                         </ul>
                         <button class="buy-product">Купи</button>
                       </span>
              </div>
              <div class="product">
-                <img class="raquet-img" src="tennis-racket1.jpg"/>
-                <label>Wilson - детска тенис ракета</label>
-                <span class="price">99,99 лв.</span>
+                <img class="raquet-img" src="tennis-balls3.jpg"/>
+                <label>Artengo - тенис топки TB100,</label>
+                <span class="price">72,99 лв.</span>
                 <span class="tooltip">
                     <ul>
-                        <li>Големина на главата: 665 см²</li>
-                        <li>Баланс: 4 pts HL</li>
-                        <li>Наплитане: 16 x 19</li>
-                        <li>Дължина: 68,6 см</li>
-                        <li>Тегло (Ненаплетена): 275 гр</li>
-                        <li>Рамка: 23 мм U Beam</li>
-                        <li>Грип: 3</li>
+                        <li>Тежест: 100гр</li>
+                        <li>Цвят: Червен</li>
+                        <li>За бавна игра</li>
+                        <li>Брой: 48</li>          
                     </ul>
                     <button class="buy-product">Купи</button>
                   </span>
