Sign up tournament form styling

--- a/Project-SIYANDO tennis courts/SaveHour.html
+++ b/Project-SIYANDO tennis courts/SaveHour.html
@@ -40,7 +40,7 @@
                <label for="name"><b>Вашето име</b></label>
                <input type="text" name="personalName" placeholder="Въведете име">
                <div class="submit-me btn-wrap">
-                <button type="submit" class="submit-me-btn">Запиши ме</button>
+                <button type="submit" onclick="checkData()" class="submit-me-btn">Запиши ме</button>
             </div>
             </form>
             </div>
