--- a/Project-SIYANDO tennis courts/SiyandoHist.html
+++ b/Project-SIYANDO tennis courts/SiyandoHist.html
@@ -93,6 +93,7 @@
                            Посока - изток/запад<br>
                            Разстояния зад основна линия до ограда - 4 метра
                       </p>
+                      <a id="save-for-court1" onclick="saveCourt1()" href="SaveHour.html">Запиши час за този корт</a>
                      </span>
                   </div>
                   <div class="court court-2">
@@ -105,6 +106,7 @@
                             Посока - изток/запад<br>
                             Разстояния зад основна линия до ограда - 6 метра
                        </p>
+                       <a id="save-for-court2" href="SaveHour.html">Запиши час за този корт</a>
                       </span>
                   </div>
                </div>
@@ -119,6 +121,7 @@
                             Посока - изток/запад<br>
                             Разстояния зад основна линия до ограда - 2 метра
                        </p>
+                       <a id="save-for-court3" href="SaveHour.html">Запиши час за този корт</a>
                       </span>
                   </div>
                   <div class="court court-4">
@@ -131,6 +134,7 @@
                             Посока - изток/запад<br>
                             Разстояния зад основна линия до ограда - 4 метра
                        </p>
+                       <a id="save-for-court4" href="SaveHour.html">Запиши час за този корт</a>
                       </span>
                   </div>
                </div>
@@ -168,6 +172,7 @@
             </div>
          </div>
       </div>
+      <script src="scripts/saveHourForm_controller.js"></script>
    </body>
 
 </html>
