--- a/Project-SIYANDO tennis courts/sign-up-tournament.html
+++ b/Project-SIYANDO tennis courts/sign-up-tournament.html
@@ -38,7 +38,7 @@
                <label for="name"><b>Име</b></label>
                <input type="text" min="0" name="personalName" placeholder="Въведете вашето име">
             <div class="submit-me btn-wrap">
-                <button type="submit" class="submit-me-btn">Запиши ме</button>
+                <button type="submit" onclick="checkData()" class="submit-me-btn">Запиши ме</button>
             </div>
             </form>
          </div>
