--- a/Project-SIYANDO tennis courts/SiyandoHist.html
+++ b/Project-SIYANDO tennis courts/SiyandoHist.html
@@ -3,8 +3,9 @@
    <head>
       <meta charset="utf-8">
       <link rel="stylesheet" href="SiyandoHist.css"/>
-      <link rel="stylesheet" href="SiyandoShop.css"/>
       <link rel="stylesheet" href="buttons.css"/>
+      <link rel="stylesheet" href="global.css"/>
+      <meta content="width=device-width, initial-scale=1" name="viewport" />
    </head>
    <body>
       <div>
@@ -12,7 +13,7 @@
       </div>
       <div class="page">
          <div class="header-bar">
-            <span class="courts btn-wrap"> 
+            <span class="courts-btn btn-wrap"> 
                 <button onclick="location.href='./SiyandoHist.html'">Кортове</button>
             </span>
             <span class="save-hour btn-wrap"> 
