--- a/Project-SIYANDO tennis courts/SiyandoShop.html
+++ b/Project-SIYANDO tennis courts/SiyandoShop.html
@@ -2,9 +2,10 @@
 <html>
    <head>
       <meta charset="utf-8">
-      <link rel="stylesheet" href="SiyandoHist.css"/>
+      <link rel="stylesheet" href="global.css"/>
       <link rel="stylesheet" href="SiyandoShop.css"/>
       <link rel="stylesheet" href="buttons.css"/>
+      <meta content="width=device-width, initial-scale=1" name="viewport" />
    </head>
    <body>
       <div>
