--- a/Project-SIYANDO tennis courts/Balls-shop.html
+++ b/Project-SIYANDO tennis courts/Balls-shop.html
@@ -86,6 +86,26 @@
              </div>
              </div>
       </div>
+      <div id="confirm" class="confirm">
+
+        <div class="confirm-content">
+            <span class="close">&times;</span>
+            <div class="product-to-confirm" id="product-to-confirm">
+                <div class="fields-to-confirm">
+                    <p>Моля въведете вашия имейл адрес, за да Ви изпратим информация относно ващата поръчка</p>
+                    <label for="email"><b>Имейл адрес</b></label>
+                    <input type="text" name="email" placeholder="Въведете вашия имейл">
+                    <footer class="buttons-confirm">
+                        <button class="cancel-btn">Откажи</button>
+                        <button class="confirm-btn">Потвърди</button>    
+                    </footer>
+                </div>
+            </div>
+        </div>
+
+        </div>
+      <script src="scripts/siyando-shop.js"></script>
+
    </body>
 
 </html>
