--- a/Project-SIYANDO tennis courts/Balls-shop.html
+++ b/Project-SIYANDO tennis courts/Balls-shop.html
@@ -92,7 +92,7 @@
             <span class="close">&times;</span>
             <div class="product-to-confirm" id="product-to-confirm">
                 <div class="fields-to-confirm">
-                    <p>Моля въведете вашия имейл адрес, за да Ви изпратим информация относно ващата поръчка</p>
+                    <p>Моля въведете вашия имейл адрес, за да Ви изпратим информация относно вашата поръчка</p>
                     <label for="email"><b>Имейл адрес</b></label>
                     <input type="text" name="email" placeholder="Въведете вашия имейл">
                     <footer class="buttons-confirm">
