images in folder

--- a/Project-SIYANDO tennis courts/Bags-shop.html
+++ b/Project-SIYANDO tennis courts/Bags-shop.html
@@ -39,7 +39,7 @@
             </div>
             <div class="products">
                 <div class="product">
-                       <img class="raquet-img" src="bag-shop1.jpg"/>
+                       <img class="raquet-img" src="images/bag-shop1.jpg"/>
                        <label>Artengo - тенис раница</label>
                        <span class="price">18,40 лв.</span>
                        <span class="tooltip">
@@ -54,7 +54,7 @@
                       </span>
                 </div>
                 <div class="product">
-                    <img class="raquet-img" src="bag-shop2.jpg"/>
+                    <img class="raquet-img" src="images/bag-shop2.jpg"/>
                     <label>Head - тенис сак</label>
                     <span class="price">109,00 лв.</span>
                     <span class="tooltip">
@@ -69,7 +69,7 @@
                       </span>
              </div>
              <div class="product">
-                <img class="raquet-img" src="bag-shop3.jpg"/>
+                <img class="raquet-img" src="images/bag-shop3.jpg"/>
                 <label>Babolat - тенис сак</label>
                 <span class="price">72,90 лв.</span>
                 <span class="tooltip">
