--- a/Project-SIYANDO tennis courts/SiyandoHist.html
+++ b/Project-SIYANDO tennis courts/SiyandoHist.html
@@ -85,7 +85,7 @@
                   <h2>Цена за любителски час</h2>
                <div class="courts-first-row">
                   <div class="court court-1">
-                     <img class="court-1-img" src="court-1.jpg"/>
+                     <img class="court-1-img" src="images/court-1.jpg"/>
                      <label>Корт №1</label>
                      <span class="tooltip">
                        <p>
@@ -98,7 +98,7 @@
                      </span>
                   </div>
                   <div class="court court-2">
-                     <img class="court-2-img" src="court-2.jpg"/>
+                     <img class="court-2-img" src="images/court-2.jpg"/>
                      <label>Корт №2</label>
                      <span class="tooltip">
                         <p>
@@ -113,7 +113,7 @@
                </div>
                <div class="courts-second-row">
                   <div class="court court-3">
-                     <img class="court-3-img" src="court-3.jpg"/>
+                     <img class="court-3-img" src="images/court-3.jpg"/>
                      <label>Корт №3</label>
                      <span class="tooltip">
                         <p>
@@ -126,7 +126,7 @@
                       </span>
                   </div>
                   <div class="court court-4">
-                     <img class="court-4-img" src="court-4.jpg"/>
+                     <img class="court-4-img" src="images/court-4.jpg"/>
                      <label>Корт №4</label>
                      <span class="tooltip">
                         <p>
