--- a/Project-SIYANDO tennis courts/SiyandoShop.html
+++ b/Project-SIYANDO tennis courts/SiyandoShop.html
@@ -39,7 +39,7 @@
             </div>
             <div class="products">
                 <div class="product">
-                       <img class="raquet-img" src="tennis-racket3.jpg"/>
+                       <img class="raquet-img" src="images/tennis-racket3.jpg"/>
                        <label>Head - тенис ракета US open</label>
                        <span class="price">139,99 лв.</span>
                        <span class="tooltip">
@@ -56,7 +56,7 @@
                       </span>
                 </div>
                 <div class="product">
-                    <img class="raquet-img" src="tennis-racket2.jpg"/>
+                    <img class="raquet-img" src="images/tennis-racket2.jpg"/>
                     <label>Wilson - тенис ракета Wimbledon</label>
                     <span class="price">159,99 лв.</span>
                     <span class="tooltip">
@@ -73,7 +73,7 @@
                       </span>
              </div>
              <div class="product">
-                <img class="raquet-img" src="tennis-racket1.jpg"/>
+                <img class="raquet-img" src="images/tennis-racket1.jpg"/>
                 <label>Wilson - детска тенис ракета</label>
                 <span class="price">99,99 лв.</span>
                 <span class="tooltip">
