--- a/Project-SIYANDO tennis courts/Balls-shop.html
+++ b/Project-SIYANDO tennis courts/Balls-shop.html
@@ -39,7 +39,7 @@
             </div>
             <div class="products">
                 <div class="product">
-                       <img class="raquet-img" src="tennis-balls1.jpg"/>
+                       <img class="raquet-img" src="images/tennis-balls1.jpg"/>
                        <label>Artengo - тенис топки TB160</label>
                        <span class="price">5,40 лв.</span>
                        <span class="tooltip">
@@ -53,7 +53,7 @@
                       </span>
                 </div>
                 <div class="product">
-                    <img class="raquet-img" src="tennis-balls2.jpg"/>
+                    <img class="raquet-img" src="images/tennis-balls2.jpg"/>
                     <label>Artengo - тенис топки TB930</label>
                     <span class="price">20,99 лв.</span>
                     <span class="tooltip">
@@ -67,7 +67,7 @@
                       </span>
              </div>
              <div class="product">
-                <img class="raquet-img" src="tennis-balls3.jpg"/>
+                <img class="raquet-img" src="images/tennis-balls3.jpg"/>
                 <label>Artengo - тенис топки TB100,</label>
                 <span class="price">72,99 лв.</span>
                 <span class="tooltip">
